--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "formarble",
-  "version": "0.0.0",
-  "description": "Extend your JSON schema with form display properties and render form with Angular",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "lodash": "~2.4.1"
-  },
-  "devDependencies": {
-    "gulp-util": "~2.2.14",
-    "gulp": "~3.6.2"
-  }
+    "name": "formarble",
+    "version": "0.0.0-α",
+    "description": "Extend your JSON schema with form display properties and render form with Angular",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Dima Chukhai",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/dimac/formarble.git"
+    },
+    "dependencies": {
+        "lodash": "~2.4.1"
+    },
+    "devDependencies": {
+        "gulp-util": "~2.2.14",
+        "gulp": "~3.6.2"
+    }
 }
