--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-    "name": "formarble",
-    "version": "0.0.0-5",
-    "description": "Extend your JSON schema with form display properties and render form with Angular",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Dima Chukhai",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/dimac/formarble.git"
-    },
-    "dependencies": {
-        "lodash": "~2.4.1"
-    },
-    "devDependencies": {
-        "gulp-util": "~2.2.14",
-        "gulp": "~3.6.2"
-    }
+  "name": "formarble",
+  "version": "0.0.0-5",
+  "description": "Extend your JSON schema with form display properties and render form with Angular",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Dima Chukhai",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dimac/formarble.git"
+  },
+  "dependencies": {
+    "lodash": "~2.4.1"
+  },
+  "devDependencies": {
+    "gulp-util": "~2.2.19",
+    "gulp": "~3.6.2",
+    "gulp-ng-html2js": "~0.1.7",
+    "gulp-plumber": "~0.6.3",
+    "gulp-concat": "~2.3.0",
+    "gulp-chug": "~0.2.3",
+    "gulp-uglify": "~0.3.1",
+    "gulp-minify-html": "~0.1.4",
+    "event-stream": "~3.1.5"
+  }
 }
