--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formarble",
-  "version": "0.0.0-9",
+  "version": "0.0.1-0",
   "description": "Extend your JSON schema with form display properties and render form with Angular",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,8 @@
     "gulp-minify-html": "~0.1.4",
     "event-stream": "~3.1.5",
     "gulp-sourcemaps": "~0.4.5",
-    "gulp-ngmin": "~0.3.0"
+    "gulp-ngmin": "~0.3.0",
+    "gulp-bump": "~0.1.10",
+    "minimist": "~0.2.0"
   }
 }
