--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "formarble*.js",
     "controls/**/*.js"
   ],
-  "version": "0.0.1-1",
+  "version": "0.0.2",
   "homepage": "https://github.com/dimac/formarble",
   "authors": [
     "Dima Chukhai <dima@luckyteam.co.uk>"
