--- a/examples/profile/bower.json
+++ b/examples/profile/bower.json
@@ -14,7 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2",
+    "angular": "~1.3",
+    "lodash": "~2",
     "bootstrap": "~3.1.1"
   }
 }
