--- a/examples/bower.json
+++ b/examples/bower.json
@@ -14,8 +14,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3",
+    "angular": "~1.5",
     "lodash": "~2",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3",
+    "bootstrap4": "twbs/bootstrap#v4-dev"
   }
 }
