--- a/examples/bower.json
+++ b/examples/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
+    "font-awesome": "~4.4.0",
     "angular": "~1.5",
     "lodash": "~2",
     "bootstrap": "~3",
